# taichi-forge

./: .gitignore  CMakeLists.txt  MANIFEST.in  README_FORGE.md  _build_imgui_tail.txt  _oom_fix_diff.txt  _oom_fix_diff_utf8.txt  _oom_fix_stat.txt  _oom_fix_stat2.txt  _oom_fix_status.txt  _oom_fix_tests_status.txt  pyproject.toml  requirements_dev.txt  setup.py  setup.py.legacy  taichi_compile_profile.csv
.github/workflows/: build_llvm20_linux.yml  build_llvm20_windows.yml  publish_pypi.yml  pull_request.yml  testing.yml
benchmarks/: run.py
benchmarks/microbenchmarks/: _items.py  _metric.py  _plan.py  _utils.py  atomic_ops.py  fill.py  math_opts.py  matrix_ops.py  memcpy.py  saxpy.py  stencil2d.py
cmake/: TaichiCAPI.cmake  TaichiCXXFlags.cmake  TaichiCore.cmake  utils.cmake
compile_doc/: P1b_热启动镜像.md  P5_并行编译.md  更新审查与保留清单.md
docs/: conftest.py
docs/design/: pypi_release.md
docs/forge/: forge_options.en.md  forge_options.zh.md  sparse_snode_on_vulkan.en.md  sparse_snode_on_vulkan.zh.md
misc/: benchmark_bit_struct_stores.py  benchmark_bls.py  benchmark_compile.py  benchmark_parallel_compilation.py  benchmark_reduction.py  benchmark_reduction_tmps.py  benchmark_scatter_bls.py  benchmark_tensor_access.py  ci_setup.py  demo_constant_fold.py  demo_launch_overhead.py  demo_listgen.py  demo_oob_ub.py  demo_trackback.py  generate_c_api.py  generate_ir_design_doc.py  idle_hello.py  minimal_timed.py  spMv_linear_solve.py  sparse_matrix.py  taichi_json.py  test_async_weaken_access.py  test_gpu_async.py  test_grid_stride_loop.py  test_gui.py  test_memory_pool.py  test_poly_timed.py  test_print.py  test_without_init.py  upload_release.py
python/taichi/lang/: impl.py  kernel_impl.py  misc.py
python/taichi/profiler/: scoped_profiler.py
python/taichi_forge/: __init__.py  _funcs.py  _kernels.py  _logging.py  _main.py  _version_check.py  experimental.py
python/taichi_forge/_lib/: __init__.py  utils.py
python/taichi_forge/_snode/: __init__.py  fields_builder.py  snode_tree.py
python/taichi_forge/_ti_module/: __init__.py  cppgen.py  module.py
python/taichi_forge/ad/: __init__.py  _ad.py
python/taichi_forge/algorithms/: _algorithms.py
python/taichi_forge/aot/: __init__.py  module.py  utils.py
python/taichi_forge/examples/: minimal.py  patterns.py
scripts/: build_llvm20_local.ps1
taichi/analysis/: offline_cache_util.cpp  offline_cache_util.h
taichi/codegen/: codegen.cpp
taichi/codegen/spirv/: CMakeLists.txt  kernel_compiler.cpp  kernel_utils.cpp  kernel_utils.h  snode_struct_compiler.cpp  snode_struct_compiler.h  spirv_allocator_contract.h  spirv_codegen.cpp  spirv_codegen.h  spirv_ir_builder.cpp  spirv_ir_builder.h
taichi/common/: logging.h
taichi/compilation_manager/: CMakeLists.txt  inproc_disk_mirror.cpp  inproc_disk_mirror.h  kernel_compilation_manager.cpp  kernel_compilation_manager.h
taichi/ir/: transforms.h  visitors.h
taichi/program/: compile_config.cpp  compile_config.h  extension.cpp  extension.h  kernel.h  program.cpp  program.h
taichi/python/: export_lang.cpp  export_misc.cpp
taichi/runtime/gfx/: CMakeLists.txt  kernel_launcher.cpp  runtime.cpp  runtime.h  snode_allocator.cpp  snode_allocator.h  snode_tree_manager.cpp
taichi/runtime/llvm/: CMakeLists.txt  kernel_launcher.cpp  llvm_context.cpp  llvm_context.h  llvm_context_pass.h  llvm_offline_cache.h  llvm_opt_pipeline.cpp  llvm_opt_pipeline.h  llvm_runtime_executor.cpp  llvm_runtime_executor.h
taichi/runtime/llvm/runtime_module/: CMakeLists.txt  node_bitmasked.h  node_dynamic.h  node_pointer.h  runtime.cpp
taichi/system/: profiler.cpp  profiler.h
taichi/transforms/: compile_to_offloads.cpp  frontend_type_check.cpp  handle_external_ptr_boundary.cpp  offload.cpp  scalarize.cpp  simplify.cpp  whole_kernel_cse.cpp
tests/: run_tests.py  test_utils.py
tests/cpp/: conftest.py
tests/p1/: .gitignore  RESULTS.md  _bench_runner.py  _hard_runner.py  bench_cold_start.py  hard_kernels.py  run_bench.py  smoke_test.py
tests/p2/: .gitignore  RESULTS.md  _debug_one.py  _parity_p1d.py.old  _runner.py  bench_p1d_vulkan.py  correctness_3backends.py  heavy_kernels.py  p2_timings_cpu.txt  pscheck.py  run_timing_check.py  run_vs_baseline.py  smoke_3backends.py  tier_inline.py  tier_parity_spv_branchy.py  tier_parity_vulkan.py  tier_single.py  tier_smoke.py  tier_spot_p2c.py  timing_diag_phase.py
tests/p3/: RESULTS.md  _optlvl_child.py  _parity_p3c_matrix_old.py  bench_cold.txt  bench_p3_abort.py  bench_p3_abort_cold.py  bench_p3c_A.txt  bench_p3c_A_utf8.txt  bench_p3c_B.txt  bench_p3c_ab.py  bench_p3d_A.txt  bench_p3d_B.txt  bench_p3d_B2.txt  bench_tier_fast_cuda.py  bench_tier_fast_llvm.py  parity_p3.py  parity_p3c_matrix.py  profile_p3d.py  profile_p3d_many.py  smoke_p3a.py  test_p3a_kernel_total.py  test_p3a_per_loop.py  test_p3b_depth.py  test_p3d_error_format.py  test_tier_fast_cuda.py  test_tier_fast_parity.py
tests/p5/: _bench_worker.py  _bench_worker_heavy.py  bench_heavy_result_cpu.txt  bench_hot_start.py  bench_inline_diag.py  bench_parallel_compile.py  bench_parallel_compile_heavy.py  inline_result.txt  r_cpu.txt  r_cuda.txt  r_vulkan.txt  r_vulkan_64.txt  smoke_p5a.py  test_parallel_compile_parity.py
tests/phase_a4/: REPORT.md  bench_suite.py  compare.py
tests/python/: bls_test_template.py  conftest.py  fuse_test_template.py  py38_only.py  test_abs.py  test_ad_atomic.py  test_ad_atomic_fwd.py  test_ad_basics.py  test_ad_basics_fwd.py  test_ad_demote_dense.py  test_ad_dynamic_index.py  test_ad_for.py  test_ad_for_fwd.py  test_ad_gdar_diffmpm.py  test_ad_global_data_access_rule_checker.py  test_ad_grad_check.py  test_ad_if.py  test_ad_if_fwd.py  test_ad_math_func.py  test_ad_ndarray.py  test_ad_offload.py  test_ad_snode_grad_type.py  test_ad_tensor.py  test_aot.py  test_api.py  test_arg_alignment.py  test_arg_check.py  test_arg_load.py  test_argpack.py  test_argument.py  test_assert.py  test_assign.py  test_ast_refactor.py  test_ast_resolver.py  test_atomic.py  test_basics.py  test_binding.py  test_bit_operations.py  test_bitmasked.py  test_bitpacked_fields.py  (+170 more)
(+231 files in other folders)
