[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "taichi-forge"
dynamic = ["version"]
description = "Taichi Forge - a community-maintained fork of the Taichi Programming Language (import name: taichi)."
readme = "README_FORGE.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Taichi Forge contributors" },
]
keywords = ["graphics", "simulation", "compiler", "gpu"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Compilers",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Games/Entertainment :: Simulation",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy>=1.23; python_version < '3.14'",
  "numpy>=2.1; python_version >= '3.14'",
  "colorama",
  "dill",
  "rich",
]

[project.urls]
Homepage = "https://github.com/fancifulland2718/taichi-forge"
Issues = "https://github.com/fancifulland2718/taichi-forge/issues"

[project.scripts]
ti = "taichi._main:main"

[tool.scikit-build]
# Pin CMake to <4. CMake 4 removed compatibility with policy versions <3.5,
# which breaks several vendored dependencies under external/ (SPIRV-Tools,
# glfw, etc. still declare cmake_minimum_required(VERSION 2.8.x / 3.1.x)).
# This mirrors the local Windows build, which uses the CMake 3.x shipped
# inside Visual Studio 2026 (C:\Program Files\Microsoft Visual Studio\18\
# ...\CMake\CMake\bin) and is known to succeed.
cmake.version = ">=3.20,<4"
cmake.build-type = "Release"
build-dir = "_skbuild/{wheel_tag}"
wheel.packages = ["python/taichi"]
wheel.exclude = [
  "**/libSPIRV-Tools-shared.so",
  "**/libSPIRV-Tools-shared.dll",
]
wheel.py-api = ""

[tool.scikit-build.cmake.define]
TI_VERSION_MAJOR = "0"
TI_VERSION_MINOR = "1"
TI_VERSION_PATCH = "0"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "version.txt"
regex = 'v?(?P<version>[0-9]+\.[0-9]+\.[0-9]+(?:[-+.][0-9A-Za-z.-]+)?)'
result = "{version}"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Calling non-taichi function",
  "ignore:`np.int` is a deprecated alias",
  "ignore:Operator \"is\" in Taichi scope is deprecated",
  "ignore:Operator \"is not\" in Taichi scope is deprecated",
]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = false
